<resources>
    <string name="app_name">prueba para unity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="button_start">Start Game</string>
    <string name="button_load">Load Game</string>
    <string name="defect_gifts_feindeers">0</string>
    <string name="before_start">Hi Santa! You have lost some gifts along the way. Now you have to pick them up and leave one in each Christmas tree. Be careful with children, they will waste your time. If you collect the reindeer your sled will go faster and you will have more time to distribute gifts.\n Do you want to start with a little advantage? Enter how many gifts / reindeer you want to use.</string>
</resources>
